syntax = "proto3";

package j5.schema.v1;

import "buf/validate/validate.proto";
import "google/protobuf/timestamp.proto";
import "j5/schema/v1/schema.proto";

option go_package = "github.com/pentops/j5/gen/j5/schema/v1/schema_j5pb";

message API {
  repeated Package packages = 1;
  Metadata metadata = 3;
}

message Metadata {
  google.protobuf.Timestamp built_at = 1;
}

message Package {
  string label = 1;
  string name = 2 [(buf.validate.field).string.pattern = "^([a-z0-9_]+\\.)v[0-9]+$"];

  string introduction = 4;
  repeated Service services = 5;
  repeated PackageEntity entities = 6;
  repeated EventSpec events = 7;
  map<string, RootSchema> schemas = 8;
}

message Service {
  string name = 1 [(buf.validate.field).string.pattern = "^[A-Z][a-zA-Z0-9]*$"];
  repeated Method methods = 2;
}

message Method {
  string name = 2 [(buf.validate.field).string.pattern = "^[a-z][a-zA-Z0-9]*$"];
  string full_grpc_name = 3;

  HTTPMethod http_method = 4 [(buf.validate.field).enum = {
    not_in: 0
    defined_only: true
  }];

  string http_path = 5 [(buf.validate.field).string.pattern = "^(\\/:?[a-z0-9_]+)+$"];
  Request request = 6 [(buf.validate.field).required = true];
  Object response_body = 7 [(buf.validate.field).required = true];

  message Request {
    Object body = 1;
    repeated ObjectProperty path_parameters = 2;
    repeated ObjectProperty query_parameters = 3;

    repeated SearchField searchable_fields = 4;
    repeated SortField sortable_fields = 5;
    repeated FilterField filterable_fields = 6;

    message SortField {
      string name = 1;
      optional Direction default_sort = 2;

      enum Direction {
        DIRECTION_UNSPECIFIED = 0;
        DIRECTION_ASC = 1;
        DIRECTION_DESC = 2;
      }
    }

    message FilterField {
      string name = 1;
      repeated string default_filters = 2;
    }

    message SearchField {
      string name = 1;
    }
  }
}

message EventSpec {
  string name = 1 [(buf.validate.field).string.pattern = "^[A-Z][a-zA-Z0-9]*$"];
  Object schema = 2 [(buf.validate.field).required = true];
}

message PackageEntity {
  Object schema = 1 [(buf.validate.field).required = true];
}

enum HTTPMethod {
  HTTP_METHOD_UNSPECIFIED = 0;
  HTTP_METHOD_GET = 1;
  HTTP_METHOD_POST = 2;
  HTTP_METHOD_PUT = 3;
  HTTP_METHOD_DELETE = 4;
  HTTP_METHOD_PATCH = 5;
}
